26 January 2009

* Be more clever about picking the right process to create the window name.
* Don't balls up the terminal on UTF-8 combined characters. Don't support them
  properly either - they are just discarded for the moment.

25 January 2009

* load-buffer command

23 January 2009

* Use reverse colours rather than swapping fg and bg for message, mode and
  status line. This makes these usable on black and white terminals.
* Better error messages when creating a session or window fails.
* Oops. Return non-zero on error. Reported by Will Maier.

21 January 2009

* Handle SIGTERM (and kill-server which uses it), a bit more neatly - tidy
  up properly and print a nicer message. Same effect though :-).
* new-window now supports -k to kill target window if it exists.
* Bring back split-window -p and -l options to specify the height a percentage
  or as a number of lines.
* Make window and session choice modes allow you to choose items in vi keys
  mode (doh!). As a side-effect, this makes enter copy selection (as well
  as C-w/M-w) when using emacs keys in copy mode. Reported by merdely.

20 January 2009

* Darwin support for automatic-rename from joshe; Darwin doesn't seem to have
  a sane method of getting argv[0] and searching for the precise insane way
  is too frustrating, so this just uses the executable name.
* Try to change the window title to match the command running it in. This is
  done by reading argv[0] from the process group leader of the group that owns
  the tty (tcgetpgrp()). This can't be done portably so some OS-dependent code
  is introduced (ugh); OpenBSD, FreeBSD and Linux are supported at the moment.

  A new window flag, automatic-rename, is available: if this is set to off, the
  window name is not changed. Specifying a name with the new-window,
  new-session or rename-window commands will automatically set this flag to off
  for the window in question. To disable it entirely set the option to off