@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.67 2009-01-25 19:00:10 tcunha Exp $
+# $Id: GNUmakefile,v 1.68 2009-01-27 20:22:33 nicm Exp $
 
 .PHONY: clean
 
@@ -42,7 +42,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       options.c options-cmd.c paste.c colour.c utf8.c clock.c \
       tty.c tty-term.c tty-keys.c tty-write.c util.c names.c \
       osdep-unknown.c osdep-openbsd.c osdep-freebsd.c osdep-linux.c \
-      osdep-darwin.c
+      osdep-darwin.c attributes.c
 
 CC?= gcc
 INCDIRS+= -I. -I-
