@@ -1,4 +1,4 @@
-/* $Id: window-more.c,v 1.26 2009-01-23 20:49:01 nicm Exp $ */
+/* $Id: window-more.c,v 1.27 2009-01-27 20:22:33 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -182,7 +182,7 @@ window_more_write_line(
 		screen_write_cursormove(ctx, screen_size_x(s) - size, 0);
 		gc.bg = options_get_number(&wp->window->options, "mode-fg");
 		gc.fg = options_get_number(&wp->window->options, "mode-bg");
-		gc.attr |= GRID_ATTR_REVERSE;
+		gc.attr |= options_get_number(&wp->window->options, "mode-attr");
 		screen_write_puts(ctx, &gc, "%s", hdr);
 		memcpy(&gc, &grid_default_cell, sizeof gc);
 	} else
