@@ -1,3 +1,14 @@
+27 January 2009
+
+* Allow status, mode and message attributes to be changed by three new options:
+  status-attr, mode-attr, message-attr. A comma-separataed list is accepted
+  containing: bright, dim, underscore, blink, reverse, hidden, italics, for
+  example:
+
+	set -g status-attr bright,blink
+
+  From Josh Elsasser, thanks!
+
 26 January 2009
 
 * Be more clever about picking the right process to create the window name.
@@ -1014,7 +1025,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.236 2009-01-26 22:57:18 nicm Exp $
+$Id: CHANGES,v 1.237 2009-01-27 20:22:33 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
